--- a/WebpageReact/src/styles/ModuleStyle.css
+++ b/WebpageReact/src/styles/ModuleStyle.css
@@ -15,10 +15,12 @@
     outline: none;
     font-size: 16px;
     margin-top: 5px;
+    overflow: auto;
   }
   .active, .collapsible:hover {
     background-color: #5185c6;
     color: white;
+    overflow: auto;
   }
   
   .collapsible:after {
@@ -41,6 +43,7 @@
     background-color: #f1f1f1;
     font-size: 15px;
     width: 95%;
+    
   }
 
   .collapsible:after {
