--- a/WebpageReact/src/styles/pageStyle.css
+++ b/WebpageReact/src/styles/pageStyle.css
@@ -3,4 +3,5 @@
     height: 100%;
     background-color: #f5f5f5;
     position: relative;
+    overflow: auto;
 }
